# QSPI-Analyzer

./: .gitignore  .gitmodules  CMakeLists.txt  KingstVIS.vcxproj  LICENSE  QSpiAnalyzer.sln  QSpiAnalyzer.vcxproj  QSpiAnalyzer.vcxproj.filters  README.md  Saleae.vcxproj  Saleae.vcxproj.filters  build.py
.github/workflows/: macOS-Build-Manual.yml
KingstAnalyzerSDK/Linux/: makefile
KingstAnalyzerSDK/Mac/: makefile
KingstAnalyzerSDK/inc/: AnalyzerResults.h  AnalyzerSettingInterface.h  AnalyzerTypes.h  LogicPublicTypes.h  SimulationChannelDescriptor.h
KingstAnalyzerSDK/lib/Mac/: libAnalyzer.dylib
cmake/: Kingst.cmake  Saleae.cmake
cmake/toolchains/: linux-arm64.cmake  linux-x64.cmake
scripts/: build_all.cmd  build_all.sh  build_kingst.cmd  build_kingst.sh  build_saleae.cmd  build_saleae.sh  package_binaries.py  start_wsl.cmd
src/: QSpiAnalyzer.cpp  QSpiAnalyzer.h  QSpiAnalyzerResults.cpp  QSpiAnalyzerResults.h  QSpiAnalyzerSettings.cpp  QSpiAnalyzerSettings.h  QSpiDataChannelManager.cpp  QSpiDataChannelManager.h  QSpiSimulationDataGenerator.cpp  QSpiSimulationDataGenerator.h  QSpiUtil.h  QspiTypes.h
